Updating package.json and changed spinner padding to ems

--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "lego",
+  "name": "legojs",
   "description": "Lego JS",
   "version": "0.0.1",
+  "npmName": "legojs",
+  "npmFileMap": [{
+    "basePath": "/",
+    "files": [
+      "lego.min.js"
+    ]
+  }],
   "author": {
     "name": "Tyler Benziger",
     "url": "http://tybenz.com"
